--- a/eTickets/eTickets/eTickets.csproj
+++ b/eTickets/eTickets/eTickets.csproj
@@ -11,10 +11,18 @@
   <ItemGroup>
     <None Remove="Data\" />
     <None Remove="Data\Enums\" />
+    <None Remove="Views\Actors\" />
+    <None Remove="Views\Producers\" />
+    <None Remove="Views\Cinemas\" />
+    <None Remove="Views\Movies\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Data\Enums\" />
+    <Folder Include="Views\Actors\" />
+    <Folder Include="Views\Producers\" />
+    <Folder Include="Views\Cinemas\" />
+    <Folder Include="Views\Movies\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
