--- a/eTickets/eTickets/eTickets.csproj
+++ b/eTickets/eTickets/eTickets.csproj
@@ -15,6 +15,7 @@
     <None Remove="Views\Producers\" />
     <None Remove="Views\Cinemas\" />
     <None Remove="Views\Movies\" />
+    <None Remove="Data\Services\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -23,6 +24,7 @@
     <Folder Include="Views\Producers\" />
     <Folder Include="Views\Cinemas\" />
     <Folder Include="Views\Movies\" />
+    <Folder Include="Data\Services\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
