Created interface for replacing repetitive code in the service files.

--- a/eTickets/eTickets/eTickets.csproj
+++ b/eTickets/eTickets/eTickets.csproj
@@ -16,6 +16,7 @@
     <None Remove="Views\Cinemas\" />
     <None Remove="Views\Movies\" />
     <None Remove="Data\Services\" />
+    <None Remove="Data\Base\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -25,6 +26,7 @@
     <Folder Include="Views\Cinemas\" />
     <Folder Include="Views\Movies\" />
     <Folder Include="Data\Services\" />
+    <Folder Include="Data\Base\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
