--- a/eTickets/eTickets/appsettings.json
+++ b/eTickets/eTickets/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;port=3306;Database=ecommerce-app-db;Uid=root;Pwd=;"
+    "DefaultConnection": "Server=eu-cdbr-west-03.cleardb.net;Database=heroku_3d58734257cfcdc;Uid=b56f6d959d1f53;Pwd=438d9e5e;"
   },
   "AllowedHosts": "*"
 }
