updated connection string for deployment

--- a/eTickets/eTickets/appsettings.json
+++ b/eTickets/eTickets/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=eu-cdbr-west-03.cleardb.net;Database=heroku_3d58734257cfcdc;Uid=b56f6d959d1f53;Pwd=438d9e5e;"
+    "DefaultConnection": "Server=us-cdbr-east-06.cleardb.net;Database=heroku_a26099bc2371852;Uid=bfbc9d87a72379;Pwd=71d34915;"
   },
   "AllowedHosts": "*"
 }
-
