--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=us-cdbr-east-06.cleardb.net;Database=heroku_a26099bc2371852;Uid=bfbc9d87a72379;Pwd=71d34915;"
+    "DefaultConnection": "Server=eu-cdbr-west-03.cleardb.net;Database=heroku_bb91ff257e2bbac;Uid=bc73898222c2a5;Pwd=edf3fa6e;",
+    //"DefaultConnection": "Server=localhost;port=3306;Database=ecommerce-app-db;Uid=root;Pwd=;"
+
   },
   "AllowedHosts": "*"
 }
