Created ShoppingCartItem model, ShoppoingCart model, Item model, OrderItem model, and the ShoppingCart class with the methods to add and remove items.

--- a/eTickets/eTickets.csproj
+++ b/eTickets/eTickets.csproj
@@ -18,6 +18,8 @@
     <None Remove="Data\Services\" />
     <None Remove="Data\Base\" />
     <None Remove="Data\ViewModels\" />
+    <None Remove="Data\Cart\" />
+    <None Remove="Views\Orders\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -29,6 +31,8 @@
     <Folder Include="Data\Services\" />
     <Folder Include="Data\Base\" />
     <Folder Include="Data\ViewModels\" />
+    <Folder Include="Data\Cart\" />
+    <Folder Include="Views\Orders\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
