--- a/eTickets/eTickets.csproj
+++ b/eTickets/eTickets.csproj
@@ -20,6 +20,9 @@
     <None Remove="Data\ViewModels\" />
     <None Remove="Data\Cart\" />
     <None Remove="Views\Orders\" />
+    <None Remove="Data\ViewComponent\" />
+    <None Remove="Views\Shared\Components\" />
+    <None Remove="Views\Shared\Components\ShoppingCartSummary\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -33,6 +36,9 @@
     <Folder Include="Data\ViewModels\" />
     <Folder Include="Data\Cart\" />
     <Folder Include="Views\Orders\" />
+    <Folder Include="Data\ViewComponents\" />
+    <Folder Include="Views\Shared\Components\" />
+    <Folder Include="Views\Shared\Components\ShoppingCartSummary\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
